--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/native-stack": "^7.1.10",
+    "@react-navigation/stack": "^7.0.14",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "^0.76.3",
+    "react-native-drawer-layout": "^4.0.3",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
